Disabled the optimization for the libSRTP

--- a/contrib/srtp/srtp_16_0.vcxproj
+++ b/contrib/srtp/srtp_16_0.vcxproj
@@ -331,6 +331,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
